# DreamLauncher

./: Cargo.toml  LICENSE  README.md  build.gradle  build.rs  settings.gradle  structure.md
public/assets/styles/: style.css  style_auth.css  style_main.css
src/: folderer_module.rs  main.rs  route.rs
src/application/: mod.rs
src/application/auth/: auth.rs  auth_context.rs  mod.rs
src/application/main/: cloud.rs  home.rs  main.rs  mod.rs  mods_and_packs.rs  new.rs  settings.rs
src/chats/: mod.rs
src/creeper/: creeper.rs  downloader.rs  filesystem.rs  java_config.rs  minecraft_models.rs  mod.rs  progress_bar.rs
src/creeper/forge/: mod.rs
src/creeper/java/: java_config.rs  java_downloader.rs  mod.rs
src/creeper/utils/: file_manager.rs  mod.rs  progress_bar.rs
src/creeper/vanilla/: downloader.rs  models.rs
src/launcher/: launcher.rs
src/main/java/xyz/dream/launcher/: DreamLauncher.java  MainScreen.java  StartingScreen.java
src/main/java/xyz/dream/launcher/managers/: Animator.java  Downloader.java  Downloader.kt  Folderer.java  Fonter.java  Fonter.kt  Iconer.java  Loader.java  Nicknamer.java
src/main/java/xyz/frogdream/launcher/: Client.java  Database.java  FrogdreamLauncher.java  ImageApp.java  MainScreen.java
src/main/java/xyz/frogdream/launcher/downloader/: Download.java
src/main/resources/Images/: icon.icns
src/managers/: folderer.rs  iconer.rs  launcher.rs  mod.rs  nicknamer.rs
ui/: main.slint
ui/assets/images/: icon.icns
