[package]
name = "launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.22", features = ["json", "http2", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
glob = "0.3.2"
futures = "0.3.31"
hyper = { version = "0.14", features = ["http2", "client"] }
hyper-rustls = { version = "0.24", features = ["http2"] }