[package]
name = "launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
# Frontend dependencies
dioxus = { version = "0.6.3", features = ["desktop"] }
dioxus-desktop = "0.6.3"
# Backend dependencies
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
glob = "0.3.2"
futures = "0.3.31"
hyper = { version = "0.14", features = ["http2", "client"] }
hyper-rustls = { version = "0.24", features = ["http2"] }